--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-native": "0.68.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7"
+    "react-native-url-polyfill": "^1.3.0",
+    "react-native-web": "0.17.7",
+    "zod": "^3.17.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
